--- a/app/src/main/res/layout/activity_agregar.xml
+++ b/app/src/main/res/layout/activity_agregar.xml
@@ -4,18 +4,16 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
-    <TextView
+    <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/tvTitulo"
-        android:text="@string/titulo_de_la_nota"
-        android:gravity="center"
-        android:textSize="22sp"/>
-    <TextView
+        android:id="@+id/etTitulo"
+        android:hint="@string/titulo_de_la_nota"
+        android:gravity="center"/>
+    <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/tvContent"
-        android:text="@string/contenido_de_la_nota"
-        android:gravity="center"
-        android:textSize="18sp"/>
+        android:id="@+id/etNotas"
+        android:hint="@string/contenido_de_la_nota"
+        android:inputType="text"/>
 </LinearLayout>
