--- a/app/src/main/res/layout/notes_list.xml
+++ b/app/src/main/res/layout/notes_list.xml
@@ -4,13 +4,13 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:padding="10dp">
-
     <TextView
         android:id="@+id/listHeader"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="sans-serif-condensed"
         android:textSize="20sp"
+        android:text="@string/titulo_de_la_nota"
         android:layout_centerVertical="true"
         android:layout_marginStart="20dp"
         android:layout_marginLeft="20dp"
@@ -22,7 +22,7 @@
         android:layout_centerVertical="true"
         android:layout_marginRight="20dp"
         android:layout_marginEnd="20dp"
-        android:src="@drawable/arrowright"
+        android:src="@drawable/arrow_right"
         android:layout_gravity="center"
         android:layout_alignParentEnd="true" />
 </RelativeLayout>
