--- a/app/src/main/res/layout/activity_principal.xml
+++ b/app/src/main/res/layout/activity_principal.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="16dp"
+    android:paddingBottom="10dp"
     android:paddingTop="16dp"
     tools:context=".PrincipalActivity">
 
@@ -25,7 +25,9 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rvLista"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="match_parent"
+            android:scrollbars="vertical"
+            android:background="@android:color/holo_blue_light"/>
     </LinearLayout>
 
     <com.getbase.floatingactionbutton.FloatingActionButton
