--- a/app/src/main/res/layout/notes_list.xml
+++ b/app/src/main/res/layout/notes_list.xml
@@ -15,14 +15,15 @@
         android:layout_marginStart="20dp"
         android:layout_marginLeft="20dp"
         android:padding="5dp"/>
-    <ImageView
+    <TextView
+        android:id="@+id/timestamp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:layout_centerVertical="true"
         android:layout_marginRight="20dp"
         android:layout_marginEnd="20dp"
-        android:src="@drawable/arrow_right"
+        android:text="timestamp"
         android:layout_gravity="center"
         android:layout_alignParentEnd="true" />
 </RelativeLayout>
