en esta version se agrego el multiselect, la hora de creacion o actualizacion, tambien el orden en que deben registrarse en la lista todas las notas entre otras cosas

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,7 @@
     <color name="colorPrimary">#3b3e4b</color>
     <color name="colorPrimaryDark">#272b45</color>
     <color name="colorAccent">#3b3e4b</color>
+
+
+    <color name="selectedOverlay">#aaa</color>
 </resources>
