--- a/app/src/main/res/layout/activity_principal.xml
+++ b/app/src/main/res/layout/activity_principal.xml
@@ -25,9 +25,7 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rvLista"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:scrollbars="vertical"
-            android:background="@android:color/holo_blue_light"/>
+            android:layout_height="wrap_content"/>
     </LinearLayout>
 
     <com.getbase.floatingactionbutton.FloatingActionButton
@@ -36,8 +34,8 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerInParent="true"
+        android:layout_centerVertical="true"
         app:fab_colorNormal="@color/colorPrimary"
-        app:fab_icon="@drawable/ic_add"/>
-
-
+        app:fab_colorPressed="@android:color/darker_gray"
+        app:fab_icon="@drawable/ic_add" />
 </RelativeLayout>
